fixed tap highlight colors on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.2);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 @media (min-width: 320px) {
